fixing repercussions of the menu icon alignment, Jira#CXDEVII-1222

--- a/components/_button.scss
+++ b/components/_button.scss
@@ -83,13 +83,14 @@ button, div.button > a, .button {
     background-color: $white;
     color: $blue;
     &.arrow:before { //currently deactivated as the current design calls for something without arrow
+      background-color: transparent;
+      margin-left: -25px;
+      margin-top: -10px;
       @include rem('font-size', 11);
       font-size: 11px;
       font-family: $font_icons;
       content: $font_icons_arrow_right;
       padding: 11px;
-      margin-left: -10px;
-      background-color: inherit;
       color: $blue;
       position: absolute;
     }
